# nova

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: default.yml  publish.yml
examples/fallback/: Cargo.toml
examples/fallback/src/: main.rs
examples/hello_serde/: Cargo.toml
examples/hello_serde/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/hello_world_path/: Cargo.toml
examples/hello_world_path/src/: main.rs
examples/hello_world_query/: Cargo.toml
examples/hello_world_query/src/: main.rs
examples/middleware/: Cargo.toml
examples/middleware/src/: main.rs
examples/nested_routes/: Cargo.toml
examples/nested_routes/src/: main.rs
nova_core/: Cargo.toml
nova_core/src/: lib.rs  request.rs  response.rs  serde.rs
nova_core/src/errors/: mod.rs
nova_core/src/ext/: has_error.rs  hash_map_ext.rs  mod.rs  request_ext.rs
nova_core/src/types/: auth.rs  headers.rs  mod.rs  path.rs  protocol.rs  query.rs  request_type.rs  status.rs
nova_core/src/validators/: has_error.rs  mod.rs
nova_middleware/: Cargo.toml
nova_middleware/src/: lib.rs  middleware.rs  middlewares.rs  server_middleware.rs
nova_middleware/src/impl/: logging.rs  mod.rs
nova_router/: Cargo.toml
nova_router/src/: callable.rs  lib.rs  route.rs  router.rs  routes.rs  server_routing.rs
nova_serde/: Cargo.toml
nova_serde/src/: lib.rs  request.rs  response.rs  serde.rs
nova_web/: Cargo.toml
nova_web/src/: core.rs  lib.rs  middleware.rs  prelude.rs  routing.rs  serde.rs  server.rs
