[package]
name = "nova_core"
version = "0.0.1"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
description = "nova - core structures, types and traits"
keywords = ["nova", "http", "web", "server", "async"]
categories = ["network-programming", "asynchronous", "web-programming::http-server"]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/nova"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
name = "nova_core"
path = "src/lib.rs"

[dependencies]
nova_serde = { path = "../nova_serde" }
base64 = "0.21"
chrono = "0.4"
