[package]
name = "nova_serde"
version = "0.0.0"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
description = "nova - router"
keywords = ["nova", "http", "web", "server", "async"]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/nova"
license = "MIT OR Apache-2.0"

[lib]
name = "nova_serde"
path = "src/lib.rs"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_urlencoded = "0.7"
serde-xml-rs = "0.6"
