[package]
name = "nova_web"
version = "0.0.0"
edition = "2021"
authors = [ "Paweł Walus <pawel.walus@protonmail.com>" ]
description = "nova - rust web server"
keywords = ["nova", "http", "web", "server", "async"]
homepage = "https://github.com/pw-order-of-devs"
repository = "https://github.com/pw-order-of-devs/nova"
license = "MIT OR Apache-2.0"

[lib]
name = "nova_web"
path = "src/lib.rs"

[dependencies]
nova_core = { path = "../nova_core" }
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
